# wiseai-date

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  scan_demo.py  scanner_cases.jsonl  test_calendar.py  test_cases.jsonl  test_scanner.py
.github/workflows/: ci.yml  publish.yml  release.yml
wisedate/: nepali_date.py
wisedate/scanner/: __init__.py  fsm.py  lexer.py  replacer.py  resolver.py  types.py  vocabulary.py
