[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiseai-date"
version = "0.1.0"
description = "Date utility for Nepali context."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "WiseYak Core" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-xdist>=3.0.0"
]

# Explicitly tell setuptools to package the "library" folder
[tool.setuptools.packages.find]
where = ["."]
include = ["library*"]